Added Initialization tests

--- a/Editor/JTuresson.Advertisements.Editor.asmdef
+++ b/Editor/JTuresson.Advertisements.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "com.jturesson.advertisements.Editor",
+    "name": "JTuresson.Advertisements.Editor",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
