--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "author": "Jesper Turesson",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "dependencies": {
+    "com.unity.ads": "3.7.5"
+  },
+  "type": "library"
 }
