--- a/Editor/JTuresson.Advertisements.Editor.asmdef
+++ b/Editor/JTuresson.Advertisements.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "JTuresson.Advertisements.Editor",
-    "rootNamespace": "",
-    "references": [],
+    "rootNamespace": "Jturesson.Advertisements.Editor",
+    "references": [
+        "GUID:4b460a3c7f46361458da609e67e1cec1"
+    ],
     "includePlatforms": [
         "Editor"
     ],
